<resources>
    <string name="app_name">ComfyKids</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="what">what</string>
    <string name="where">where</string>
    <string name="when">when</string>
    <string name="reset">Reset</string>
    <string name="title">It will be...</string>
    <string name="title_hint">Flip three cards to see your future.</string>
</resources>