<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.kccorp.comfykids.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/label_title_size" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hint"
                android:textSize="@dimen/label_description_size" />

            <include
                layout="@layout/button_table_layout"
                bind:vm="@{vm}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_when"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when"
                    android:textSize="@dimen/text_title_size" />

                <TextView
                    android:id="@+id/value_when"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.whenValue}"
                    android:textSize="@dimen/text_content_size" />

                <TextView
                    android:id="@+id/title_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/where"
                    android:textSize="@dimen/text_title_size" />

                <TextView
                    android:id="@+id/value_where"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.whereValue}"
                    android:textSize="@dimen/text_content_size" />

                <TextView
                    android:id="@+id/title_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what"
                    android:textSize="@dimen/text_title_size" />

                <TextView
                    android:id="@+id/value_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.whatValue}"
                    android:textSize="@dimen/text_content_size" />
            </LinearLayout>

            <Button
                android:id="@+id/button_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="@{()->vm.onClickReset()}"
                android:text="@string/reset" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>